gfx/ots/src/gvar.h
@@ -16,14 +16,26 @@ namespace ots {
 class OpenTypeGVAR : public Table {
  public:
   explicit OpenTypeGVAR(Font* font, uint32_t tag)
-      : Table(font, tag, tag) { }
+      : Table(font, tag, tag), m_ownsData(false) { }
+
+  virtual ~OpenTypeGVAR() {
+    if (m_ownsData) {
+      delete[] m_data;
+    }
+  }
 
   bool Parse(const uint8_t* data, size_t length);
   bool Serialize(OTSStream* out);
 
+#ifdef OTS_SYNTHESIZE_MISSING_GVAR
+  bool InitEmpty();
+#endif
+
  private:
   const uint8_t *m_data;
   size_t m_length;
+
+  bool m_ownsData;
 };
 
 }  // namespace ots
